--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 </div>    
             </div>
         </div>  
-            <h3 class="courses-demo-heading"> Watch A Demo Lecture</h3>
+            <h3 class="courses-demo-heading"> Watch A Demo Lecture ...</h3>
         <div>
         
         <div class="demo-video">
