--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             .courses-container-heading{
                 font-family: Arial;
                 text-align: center;
-                color: rgb(19, 19, 19);
+                color: black; 
                 font-size: 40px;
                 margin-bottom: 40px;
             }
@@ -16,45 +16,51 @@
                 column-gap: 35px;
                 row-gap: 40px;
                 margin: auto;
-                width: 80%;      
+                width: 80%;        
             }  
-            @media (max-width: 1280px){
+            @media (max-width: 1300px){
                 .courses-container-grid{
-                    grid-template-columns: 1fr 1fr;             
+                    grid-template-columns: 1fr 1fr;   
+                    width: 70%;          
                 }
             } 
             @media (max-width: 1050px){
                 .courses-container-grid{
-                    grid-template-columns: 1fr;     
+                    grid-template-columns: 1fr;  
+                    width: 50%;   
                 }
             } 
             .course{
                 background-color: rgb(227, 252, 252);
+                color: rgb(10, 94, 94); 
                 border-width: 0.5px;
                 border-color:rgb(23, 143, 143);
                 border-style: solid;
-                box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.15);
+                box-shadow: -3px -3px 10px rgba(0, 0, 0, 0.15);
                 border-radius: 8px;
                 overflow: hidden;
                 cursor: pointer;
+                transition: transform 0.3s ease-in-out;
             }  
             .course:hover {
-               color:rgb(13, 92, 92);   
-               box-sizing: 2%;
+                transform: scale(1.05);
+                box-shadow: -6px -6px 20px rgba(0, 0, 0, 0.15);
+                /* outline: 2px solid rgb(10, 94, 94); */
+                /* color: rgb(207, 94, 18);    */
             }     
             p{
                 font-family: Arial;
                 margin-top: 0px;
                 margin-bottom: 0px;   
             }
-            .video-title{
+            .video-title{  
                 font-weight: bold;
                 font-size: 26px;
                 margin-top: 2px;
                 margin-bottom: 2px;
                 text-align: center;
             }
-            .video-subtitle{
+            .video-subtitle{     
                 font-size: 16px;
                 margin-bottom: 6px;
                 text-align: center;
@@ -80,7 +86,6 @@
             }
             .amount{
                 text-align: right;
-                color: rgb(67, 98, 98);
                 font-weight: bold;
                 margin-right: 5px;
             }
@@ -346,5 +351,3 @@
    
     </Body>
 </html>
-
-
